--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ant-design": "^1.0.0",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.2",
