--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
     "ant-design": "^1.0.0",
+    "antd": "^4.9.3",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
