--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.9.3",
     "d3": "^6.3.1",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
