--- a/package.json
+++ b/package.json
@@ -3,31 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.3.0",
-    "@esri/react-arcgis": "^5.1.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.2.2",
-    "antd": "^4.9.1",
-    "axios": "^0.21.0",
-    "esri-loader": "^2.16.0",
-    "jquery": "^3.5.1",
-    "lodash": "^4.17.20",
-    "node-sass": "^4.14.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
+    "@ant-design/icons": "4.3.0",
+    "@esri/react-arcgis": "5.1.0",
+    "@fortawesome/fontawesome-svg-core": "1.2.32",
+    "@fortawesome/free-brands-svg-icons": "5.15.1",
+    "@fortawesome/free-regular-svg-icons": "5.15.1",
+    "@fortawesome/free-solid-svg-icons": "5.15.1",
+    "@fortawesome/react-fontawesome": "0.1.14",
+    "ant-design": "1.0.0",
+    "antd": "4.9.4",
+    "axios": "^0.21.1",
+    "d3": "6.3.1",
+    "esri-loader": "2.16.0",
+    "jquery": "3.5.1",
+    "lodash": "4.17.20",
+    "moment": "2.29.1",
+    "prop-types": "15.7.2",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-redux": "7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
+    "redux": "4.0.5",
+    "redux-logger": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "rxjs": "^6.6.3",
-    "web-vitals": "^0.2.4"
+    "rxjs": "6.6.3",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
